Add delete list alert functionality plus template. Fix bugs

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             </label>
         </div>
     </template>
+    <!--Template for delete alert implemented with JS-->
+    <template class="template-delete-alert" data-delete-alert-template>
+        <div class="delete-alert-container">
+            <div class="alert-title-div">
+                <h3>Your list will be permanently deleted.</h3>
+            </div>
+            <div class="delete-alert">
+                <button class="cancel-button">Cancel</button>
+                <button class="ok-button">OK</button>
+            </div>
+        </div>
+    </template>
 </body>
 
 </html>
