Add date functionality

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 
     <div class="to-do-list" data-current-display-container>
         <div class="to-do-header">
-            <h2 class="list-title" data-list-title>List one</h2>
-            <p class="task-count" data-current-list-count>3 tasks remaining</p>
+            <h2 class="list-title" data-list-title></h2>
+            <div class="list-subtitle">
+                <p class="task-date" data-current-list-date></p>
+                <p class="task-count" data-current-list-count></p>
+            </div>
         </div>
 
         <div class="to-do-body">
